--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -32,29 +32,18 @@
         <article id="banner">
             <div class="slider">
                 <div class="slide">
-                    <input type="radio" name="radio-btn" id="radio1">
-                    <input type="radio" name="radio-btn" id="radio2">
-                    <input type="radio" name="radio-btn" id="radio3">
-
-                    <div class="banner-itme first">
+                    <div class="img-container">
                         <img src="./resources/img/banner-apartment.jpg" alt="item1" title="item1">
                     </div>
-                    <div class="banner-itme">
-                        <img src="./resources/img/banner-bedroom.jpg" alt="item2" title="item2">
+                    <div class="img-container">
+                            <img src="./resources/img/banner-bedroom.jpg" alt="item2" title="item1">
                     </div>
-                    <div class="banner-itme">
+                    <div class="img-container">
                         <img src="./resources/img/banner-couch.jpg" alt="item3" title="item3">
                     </div>
-                    <div class="nav-auto">
-                        <div class="a-b1"></div>
-                        <div class="a-b2"></div>
-                        <div class="a-b3"></div>
+                    <div class="img-container">
+                        <img src="./resources/img/banner-office.jpg" alt="item4" title="item4">
                     </div>
-                </div>
-                <div class="nav-m">
-                    <label for="radio1" class="m-btn"></label>
-                    <label for="radio2" class="m-btn"></label>
-                    <label for="radio3" class="m-btn"></label>
                 </div>
             </div>
         </article>
