--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -32,6 +32,10 @@
         <article id="banner">
             <div class="slider">
                 <div class="slide">
+                    <input type="radio" name="radion-btn" id="radio1">
+                    <input type="radio" name="radion-btn" id="radio2">
+                    <input type="radio" name="radion-btn" id="radio3">
+                    <input type="radio" name="radion-btn" id="radio4">
                     <div class="img-container">
                         <img src="./resources/img/banner-apartment.jpg" alt="item1" title="item1">
                     </div>
@@ -44,6 +48,18 @@
                     <div class="img-container">
                         <img src="./resources/img/banner-office.jpg" alt="item4" title="item4">
                     </div>
+                    <div class="nav-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+                </div>
+                <div class="nav-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
                 </div>
             </div>
         </article>
