--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -31,35 +31,41 @@
     <main>
         <article id="banner">
             <div class="slider">
-                <div class="slide">
-                    <input type="radio" name="radion-btn" id="radio1">
-                    <input type="radio" name="radion-btn" id="radio2">
-                    <input type="radio" name="radion-btn" id="radio3">
-                    <input type="radio" name="radion-btn" id="radio4">
-                    <div class="img-container">
-                        <img src="./resources/img/banner-apartment.jpg" alt="item1" title="item1">
-                    </div>
-                    <div class="img-container">
-                            <img src="./resources/img/banner-bedroom.jpg" alt="item2" title="item1">
-                    </div>
-                    <div class="img-container">
-                        <img src="./resources/img/banner-couch.jpg" alt="item3" title="item3">
-                    </div>
-                    <div class="img-container">
-                        <img src="./resources/img/banner-office.jpg" alt="item4" title="item4">
-                    </div>
-                    <div class="nav-auto">
-                        <div class="auto-btn1"></div>
-                        <div class="auto-btn2"></div>
-                        <div class="auto-btn3"></div>
-                        <div class="auto-btn4"></div>
-                    </div>
-                </div>
-                <div class="nav-manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
-                    <label for="radio4" class="manual-btn"></label>
+                <div class="slidebox">
+                    <input type="radio" name="slide" id="slide1" checked>
+                    <input type="radio" name="slide" id="slide2">
+                    <input type="radio" name="slide" id="slide3">
+                    <input type="radio" name="slide" id="slide4">
+                    <ul class="slidelist">
+                        <li class="slideitem">
+                            <div>
+                                <label for="slide4" class="left"></label>
+                                <label for="slide2" class="right"></label>
+                                <a><img src="./resources/img/banner-apartment.jpg" alt="item1" title="item1"></a>
+                            </div>
+                        </li>
+                        <li class="slideitem">
+                            <div>
+                                <label for="slide1" class="left"></label>
+                                <label for="slide3" class="right"></label>
+                                <a><img src="./resources/img/banner-bedroom.jpg" alt="item2" title="item2"></a>
+                            </div>
+                        </li>
+                        <li class="slideitem">
+                            <div>
+                                <label for="slide2" class="left"></label>
+                                <label for="slide4" class="right"></label>
+                                <a><img src="./resources/img/banner-couch.jpg" alt="item3" title="item3"></a>
+                            </div>
+                        </li>
+                        <li class="slideitem">
+                            <div>
+                                <label for="slide3" class="left"></label>
+                                <label for="slide1" class="right"></label>
+                                <a><img src="./resources/img/banner-office.jpg" alt="item4" title="item4"></a>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </article>
