--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -69,6 +69,15 @@
                 </div>
             </div>
         </article>
+        <article id="house">
+            <div class="h-cards">
+                <div class="h-card">
+                    <div class="h-img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
 </body>
 </html>
