--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -69,15 +69,19 @@
                 </div>
             </div>
         </article>
-        <article id="house">
+    </main>
+    <article id="house">
             <div class="h-cards">
                 <div class="h-card">
                     <div class="h-img">
-                        <img src="" alt="">
+                        <img src="./resources/img/housewarming_party/1_before.jpg" alt="before1" title="before1">
                     </div>
+                    <ul class="h1">
+                        <li class="name">user1</li>
+                        <li class="star">aa</li>
+                    </ul>
                 </div>
             </div>
-        </article>
-    </main>
+    </article>
 </body>
 </html>
