전문가 완성

--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -146,5 +146,59 @@
             </div>
         </div>
     </article>
+    <article id="pro">
+        <div class="pro-h2">
+            <h5>전문가들</h5>
+            <div class="btn-house">
+                <p><a href="#" class="btn-thebogi">더 보기</a></p>
+            </div>
+        </div>
+        <div class="pro-cards">
+            <div class="pro-card">
+                <div class="pro-item">
+                    <div class="pro-front">
+                        <img src="./resources/img/specialist/specialist1.jpg" alt="pro1" title="pro1">
+                    </div>
+                    <div class="pro-back">
+                        <h1>전문가1</h1>
+                        <p>아이디 : specialist1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-card">
+                <div class="pro-item">
+                    <div class="pro-front">
+                        <img src="./resources/img/specialist/specialist2.jpg" alt="pro2" title="pro2">
+                    </div>
+                    <div class="pro-back">
+                        <h1>전문가2</h1>
+                        <p>아이디 : specialist2</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-card">
+                <div class="pro-item">
+                    <div class="pro-front">
+                        <img src="./resources/img/specialist/specialist3.jpg" alt="pro3" title="pro3">
+                    </div>
+                    <div class="pro-back">
+                        <h1>전문가3</h1>
+                        <p>아이디 : specialist3</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pro-card">
+                <div class="pro-item">
+                    <div class="pro-front">
+                        <img src="./resources/img/specialist/specialist4.jpg" alt="pro4" title="pro4">
+                    </div>
+                    <div class="pro-back">
+                        <h1>전문가4</h1>
+                        <p>아이디 : specialist4</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
