--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -200,5 +200,39 @@
             </div>
         </div>
     </article>
+    <article id="review">
+        <div class="review-back"> 
+            <div class="review-info">
+                <div class="review1">
+                    <p> - 전문가 이름 : 전문가2</p>
+                    <p> - 전문가 아이디 : specialist2</p>
+                    <p> - 작성자 이름 : 박재현</p>
+                    <p> - 작성자 아이디 : park</p>
+                    <p> - 비용 : 3,200,000</p>
+                    <p> - 내용 : 원하던 아이언맨 컨셉으로 너무 잘 꾸며주셨습니다!</p>
+                    <p>   - 평점 : 5</p>
+                </div>
+                <div class="review2">
+                    <p> - 전문가 이름 : 전문가4<br>
+                    - 전문가 아이디 : specialist4<br>
+                    - 작성자 이름 : 김정수<br>
+                    - 작성자 아이디 : Kim<br>
+                    - 비용 : 5,500,000<br>
+                    - 내용 : 요구사항대로 부드러운 느낌을 잘 살려주셨습니다.<br>
+                    - 평점 : 4 </p>
+                </div>
+                <div class="review-btn">
+                    <h5>더 많은 후기들</h5>
+                    <div class="btn-house">
+                        <p><a href="#" class="btn-thebogi">더 보기 <i class="fa-solid fa-angle-right"></i> </a></p>
+                
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+    <footer>
+            <p>Copyright (C) 2020 by MyHome Inc All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
