--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -203,7 +203,8 @@
     <article id="review">
         <div class="review-back"> 
             <div class="review-info">
-                <div class="review1">
+                <div class="review-border1">
+                    <div class="review1">
                     <p> - 전문가 이름 : 전문가2</p>
                     <p> - 전문가 아이디 : specialist2</p>
                     <p> - 작성자 이름 : 박재현</p>
@@ -211,8 +212,10 @@
                     <p> - 비용 : 3,200,000</p>
                     <p> - 내용 : 원하던 아이언맨 컨셉으로 너무 잘 꾸며주셨습니다!</p>
                     <p>   - 평점 : 5</p>
+                    </div>
                 </div>
-                <div class="review2">
+                <div class="review-border1">
+                    <div class="review2">
                     <p> - 전문가 이름 : 전문가4<br>
                     - 전문가 아이디 : specialist4<br>
                     - 작성자 이름 : 김정수<br>
@@ -220,6 +223,7 @@
                     - 비용 : 5,500,000<br>
                     - 내용 : 요구사항대로 부드러운 느낌을 잘 살려주셨습니다.<br>
                     - 평점 : 4 </p>
+                    </div>
                 </div>
                 <div class="review-btn">
                     <h5>더 많은 후기들</h5>
