--- a/Publishing/index.html
+++ b/Publishing/index.html
@@ -29,7 +29,7 @@
             </nav>
         </article>
     </header>
-    <main>
+     <main>  <!-- 슬라이더 -->
         <article id="banner">
             <div class="slider">
                 <div class="slidebox">
@@ -71,6 +71,7 @@
             </div>
         </article>
     </main>
+    <!-- 집들이 -->
     <article id="house">
         <h3>온라인 집들이</h3>
         <div class="house-cards">
@@ -146,6 +147,7 @@
             </div>
         </div>
     </article>
+    <!-- 전문가 -->
     <article id="pro">
         <div class="pro-h2">
             <h5>전문가들</h5>
@@ -200,6 +202,7 @@
             </div>
         </div>
     </article>
+    <!-- 후기 -->
     <article id="review">
         <div class="review-back"> 
             <div class="review-info">
@@ -235,6 +238,7 @@
             </div>
         </div>
     </article>
+    <!-- 푸터 -->
     <footer>
             <p>Copyright (C) 2020 by MyHome Inc All Rights Reserved.</p>
     </footer>
